# audiotaglib

./: .gitignore  AudioContainers.txt  CMakeLists.txt  CMakeSettings.json
accessor-generator/: CMakeLists.txt  fields-example.txt  fields.csv
accessor-generator/include/: Configuration.hpp  Field.hpp
accessor-generator/src/: Configuration.cpp  Field.cpp  main.cpp
audioexec/: CMakeLists.txt  main.cpp
audiotaglib/: CMakeCache.txt  CMakeLists.txt  main.cpp
audiotaglib/doc/: Doxyfile.in
audiotaglib/include/tag/: .fuse_hidden00001cb40000000a  AudioContainerFormat.hpp  AudioFileInformation.hpp  AudioTag.hpp  AudioTagFormat.hpp  AudioTagMap.hpp  AudioTagProcessorBase.hpp  AudioTagScanner.hpp
audiotaglib/include/tag/config/: WriteConfiguration.hpp  types.hpp
audiotaglib/include/tag/except/: FileNotFoundException.hpp  FileNotReadableException.hpp  FileNotWritableException.hpp  FileParseException.hpp  InvalidFileException.hpp  StreamParseException.hpp
audiotaglib/include/tag/manager/: AudioTagManager.hpp  AudioTagManagerConfiguration.hpp  AudioTagManagerFactory.hpp
audiotaglib/include/tag/manager/write/: StaticWriteManagerFactory.hpp  TagWriteManager.hpp
audiotaglib/include/tag/reader/: ASFMetadataReader.hpp  AiffChunksReader.hpp  AudioTagReader.hpp  ID3v1AudioTagReader.hpp  ID3v1TagReader.hpp  ID3v2TagReader.hpp  RiffInfoReader.hpp  StaticReaderFactory.hpp  VorbisCommentsReader.hpp
audiotaglib/include/tag/scanner/: APETagScanner.hpp  ASFMetadataScanner.hpp  AiffChunksScanner.hpp  AudioTagScanner.hpp  FLACScanner.hpp  ID3TagScanner.hpp  OggScanner.hpp  RiffInfoScanner.hpp  StaticScannerFactory.hpp  TagScanner.hpp  TagScannerProvider.hpp
audiotaglib/include/tag/types/: Barcode.hpp  Date.hpp  ISRC.hpp  Image.hpp  Lyrics.hpp
audiotaglib/include/tag/util/: util.hpp
audiotaglib/include/tag/writer/: AudioTagWriter.hpp  ID3v1TagWriter.hpp
audiotaglib/src/: main.cpp
audiotaglib/src/tag/: AudioContainerFormat.cpp  AudioFileInformation.cpp  AudioTag.cpp  AudioTagFormat.cpp  AudioTagInformation.cpp  AudioTagMap.cpp
audiotaglib/src/tag/config/: AudioTagConfiguration.cpp  ScanConfiguration.cpp  WriteConfiguration.cpp
audiotaglib/src/tag/except/: FileException.cpp  FileNotFoundException.cpp  FileNotReadableException.cpp  FileNotWritableException.cpp  FileParseException.cpp  InvalidFileException.cpp  StreamParseException.cpp  TagsNotSupportedException.cpp
audiotaglib/src/tag/manager/: AudioTagManager.cpp  AudioTagManagerConfiguration.cpp  AudioTagManagerFactory.cpp
audiotaglib/src/tag/manager/write/: StaticWriteManagerFactory.cpp  TagWriteManager.cpp
audiotaglib/src/tag/priv/: headers.hpp  icomp.cpp  read_util.cpp  read_util.hpp  write_util.cpp
audiotaglib/src/tag/priv/ape/: Header.cpp  Header.hpp  ValueProcessor.cpp  ValueProcessor.hpp  ValueType.cpp  ValueType.hpp  icomp.cpp  icomp.hpp
audiotaglib/src/tag/priv/asf/: DescriptorProcessor.cpp  DescriptorProcessor.hpp
audiotaglib/src/tag/priv/config/: scan_configuration.cpp  scan_configuration.hpp  write_configuration.cpp  write_configuration.hpp
audiotaglib/src/tag/priv/id3/: Frame.cpp  Frame.hpp  FrameProcessor.cpp  FrameProcessor.hpp  Header.cpp  Header.hpp  MonthDayDate.cpp  MonthDayDate.hpp  TextEncoding.cpp  TextEncoding.hpp
audiotaglib/src/tag/reader/: APETagReader.cpp  ASFMetadataReader.cpp  AiffChunksReader.cpp  AudioTagReader.cpp  FlacPicturesReader.cpp  ID3v1AudioTagReader.cpp  ID3v1TagReader.cpp  ID3v2AudioTagReader.cpp  ID3v2TagReader.cpp  ID3v2TagReaderBase.cpp  RiffInfoReader.cpp  StaticReaderFactory.cpp  VorbisCommentsReader.cpp
audiotaglib/src/tag/scanner/: APETagScanner.cpp  ASFMetadataScanner.cpp  AiffChunksScanner.cpp  AudioTagScanner.cpp  FLACScanner.cpp  ID3TagScanner.cpp  OggScanner.cpp  RiffInfoScanner.cpp  StaticScannerFactory.cpp  TagScanner.cpp  TagScannerProvider.cpp
audiotaglib/src/tag/string/: genres.cpp
audiotaglib/src/tag/types/: Barcode.cpp  Date.cpp  ISRC.cpp  Image.cpp  Lyrics.cpp
audiotaglib/src/tag/util/: util.cpp
audiotaglib/src/tag/writer/: AudioTagWriter.cpp  ID3v1TagWriter.cpp  StaticWriterFactory.cpp
audiotaglib/tag/: APETagReader.hpp  APETagScanner.cpp  APETagScanner.hpp  ASFMetadataReader.cpp  ASFMetadataReader.hpp  ASFMetadataScanner.cpp  ASFMetadataScanner.hpp  AudioContainerFormat.cpp  AudioContainerFormat.hpp  AudioFileInformation.hpp  AudioFormat.hpp  AudioTag.cpp  AudioTag.hpp  AudioTagFormat.hpp  AudioTagInformation.hpp  AudioTagMap.cpp  AudioTagMap.hpp  AudioTagProcessorBase.hpp  AudioTagReader.cpp  AudioTagReader.hpp  AudioTagScanner.cpp  AudioTagScanner.hpp  Date.cpp  Date.hpp  ID3TagScanner.cpp  ID3TagScanner.hpp  ID3v1AudioTagReader.cpp  ID3v1AudioTagReader.hpp  ID3v2AudioTagReader.cpp  ID3v2AudioTagReader.hpp  ID3v2TagReaderBase.cpp  ID3v2TagReaderBase.hpp  ISRC.cpp  ISRC.hpp  Image.cpp  Image.hpp  Lyrics.cpp  Lyrics.hpp  RiffInfoReader.cpp  RiffInfoScanner.cpp  (+17 more)
audiotaglib/tag/except/: FileException.hpp  FileNotFoundException.cpp  FileNotWritableException.hpp  FileParseException.cpp  FileParseException.hpp
audiotaglib/tag/manager/: AudioTagManager.cpp  AudioTagManager.hpp  AudioTagManagerConfiguration.cpp  AudioTagManagerFactory.cpp  AudioTagManagerFactory.hpp
audiotaglib/tag/priv/: headers.hpp  read_util.cpp  read_util.hpp
audiotaglib/tag/priv/ape/: Header.hpp
audiotaglib/tag/priv/id3/: Header.hpp
audiotaglib/tag/reader/: APETagReader.cpp  ASFMetadataReader.cpp  ASFMetadataReader.hpp  AiffChunksReader.cpp  AiffChunksReader.hpp  AudioTagReader.cpp  ID3v1AudioTagReader.cpp  ID3v1AudioTagReader.hpp  ID3v2TagReaderBase.cpp  RiffInfoReader.cpp  RiffInfoReader.hpp  StaticReaderFactory.cpp  StaticReaderFactory.hpp
audiotaglib/tag/scanner/: APETagScanner.cpp  ASFMetadataScanner.cpp  AiffChunksScanner.cpp  AudioTagScanner.cpp  AudioTagScanner.hpp  ID3TagScanner.cpp  ID3TagScanner.hpp  RiffInfoScanner.cpp  RiffInfoScanner.hpp  StaticScannerFactory.cpp  StaticScannerFactory.hpp
audiotaglib/tag/string/: genres.cpp
audiotaglib/test/: test_Date.cpp  test_Image.cpp
test/: CMakeLists.txt  main.cpp  test_Date.cpp  test_Image.cpp
(+321 files in other folders)
